updated Galician translation

--- a/po/wesnoth-low/gl.po
+++ b/po/wesnoth-low/gl.po
@@ -11,13 +11,15 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-29 21:14+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 09:08+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
 
@@ -44,7 +46,7 @@ msgid ""
 "the recorded history of the Elves.\n"
 "\n"
 msgstr ""
-"A historia de Cälén, o gran señor dos elfos que uniu ao seu pobo tras a "
+"A historia de Cälén, o gran cabaleiro dos elfos que uniu ao seu pobo tras a "
 "segunda invasión do gran continente por parte dos orcos e que se converteu "
 "no heroe de maior renome na historia escrita dos elfos.\n"
 "\n"
@@ -67,7 +69,7 @@ msgstr "(normal)"
 #. [campaign]: id=LOW
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:92
 msgid "Lord"
-msgstr "Señor"
+msgstr "Cabaleiro"
 
 #. [campaign]: id=LOW
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:93
@@ -77,7 +79,7 @@ msgstr "(difícil)"
 #. [campaign]: id=LOW
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:93
 msgid "High Lord"
-msgstr "Gran señor"
+msgstr "Gran cabaleiro"
 
 #. [about]
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:96
@@ -126,7 +128,7 @@ msgid ""
 "And the rest of the Wesnoth community for feedback,\n"
 "criticism, help with WML code and graphics."
 msgstr ""
-"E ao resto da comunidade de Wesnoth polas súas\n"
+"E ao resto da comunidade polas súas\n"
 "achegas, críticas, axuda co código WML e imaxes."
 
 #. [event]
@@ -378,7 +380,7 @@ msgstr ""
 "orcos, e a súa sombra sobre os elfos fíxose cada vez maior.\n"
 "\n"
 "Esta é a historia de Cälén, Lándar, e dos elfos nos tempos en que os humanos "
-"chegaron a Wesnoth."
+"chegaron do noroeste."
 
 #. [side]
 #. [side]: id=Velon, type=Elvish Captain
@@ -1373,9 +1375,9 @@ msgid ""
 "sworn followers. And there is that which you should know about the treasure "
 "the orcs seek..."
 msgstr ""
-"Libres! Señor Cälén, estámoslle en eterna débeda, conte coa nosa axuda para "
-"o que necesite. E hai algo que debería saber acerca do tesouro que buscan os "
-"orcos…"
+"Libres! Cabaleiro Cälén, estámoslle en eterna débeda, conte coa nosa axuda "
+"para o que necesite. E hai algo que debería saber acerca do tesouro que "
+"buscan os orcos…"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:426
@@ -1728,7 +1730,7 @@ msgstr "—para seres un elfo—."
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:306
 msgid "The orcs ha’ been defeated. My lord, we are in your debt."
-msgstr "Derrotamos aos orcos. Señor elfo, estamos en débeda convosco."
+msgstr "Derrotamos aos orcos. Cabaleiro elfo, estamos en débeda convosco."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:310
@@ -2300,7 +2302,8 @@ msgid ""
 msgstr ""
 "Señores, este é Olur. El e os seus compañeiros loitaron ao noso lado e teñen "
 "ben merecido un lugar neste consello. A guerra que se nos ven enriba afecta "
-"a todo Wesnoth, e todos debemos involucrarnos, elfos, ananos e humanos."
+"a todo o Reino do Noroeste, e todos debemos involucrarnos, elfos, ananos e "
+"humanos."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/08_Council_of_Hard_Choices.cfg:45
@@ -3230,8 +3233,8 @@ msgid ""
 "heart, can safely handle it outside of battle. Unshielded, its magical "
 "radiance changes Haldric a little every time he comes close to it."
 msgstr ""
-"Haldric foi para min un amigo, unha vez, pero foi el quen me desterrou de "
-"Wesnoth. Acusoume de intentar roubar o rubí, de intentar facerme co seu "
+"Haldric foi para min un amigo, unha vez, pero foi el quen me desterrou do "
+"Noroeste. Acusoume de intentar roubar o rubí, de intentar facerme co seu "
 "poder… Pero o certo é que o rubí está a trastornar a mente de Haldric, "
 "facéndoo máis xoto e desconfiado con aqueles que outrora consideraba os seus "
 "aliados. Calquera pode brandir o rubí na batalla cando a súa ira se mestura "
@@ -3972,7 +3975,7 @@ msgstr ""
 #. [message]: id=Aldar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:979
 msgid "The King is here! Hail Haldric II, King of Wesnoth!"
-msgstr "O rei está aquí! Saúdos, Haldric II, rei de Wesnoth!"
+msgstr "O rei está aquí! Saúdos, Haldric II, rei do Noroeste!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:994
@@ -4048,7 +4051,7 @@ msgstr ""
 "non vos axudou cando os orcos vos atacaron. Pero agora está morto. Hai unha "
 "morea de cousas que meu pai fixo que non alcanzo a comprender. Volveuse "
 "desconfiado e estraño durante os seus derradeiros días. Pero agora son "
-"<i>eu</i> o rei de Wesnoth, non meu pai. E pretendo renovar a nosa alianza "
+"<i>eu</i> o rei do Noroeste, non meu pai. E pretendo renovar a nosa alianza "
 "asinando un novo tratado, aquí mesmo, convosco."
 
 #. [part]
@@ -5140,7 +5143,8 @@ msgstr "Gálenor"
 msgid ""
 "My lord Kalenz, you are in great danger! You must leave here immediately."
 msgstr ""
-"Señor Cälén, estades en grave perigo! Tedes que saír de aquí de inmediato."
+"Cabaleiro Cälén, estades en grave perigo! Tedes que saír de aquí de "
+"inmediato."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:396
@@ -5155,7 +5159,7 @@ msgid ""
 "out that he has already ordered your assassination."
 msgstr ""
 "Lándar tomou o control do exército. Eliminou ao consello e autoproclamouse "
-"«Gran Señor dos Elfos». E o que é peor, disque xa ordenou a vosa morte."
+"«Gran Cabaleiro dos Elfos». E o que é peor, disque xa ordenou a vosa morte."
 
 #. [message]: id=Crintil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:404
@@ -5210,7 +5214,7 @@ msgstr ""
 "mentres Lándar seguise con vida. Pero durante os seus anos de retiro a fama "
 "das súas fazañas non fixera máis que medrar. Moitas sandadoras e feiticeiras "
 "responderan á chamada de Cleodil, e Cälén descubriu que as tropas acudían ao "
-"seu chamamento coma se aínda conservase o título de gran señor."
+"seu chamamento coma se aínda conservase o título de gran cabaleiro."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/22_Northern_Battle.cfg:40
@@ -5403,7 +5407,7 @@ msgid ""
 "High Lord of the Elves. North and South Elves swore allegiance to him."
 msgstr ""
 "Como Lándar desfixera o consello dos elfos, Cälén, a desgana, foi elixido "
-"Gran Señor dos Elfos. Os elfos do norte e do sur xuráronlle lealdade."
+"Gran Cabaleiro dos Elfos. Os elfos do norte e do sur xuráronlle lealdade."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/24_Epilogue.cfg:28
@@ -5616,7 +5620,7 @@ msgstr "Non podo loitar contra os orcos eu só! Todo está perdido!"
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:120
 msgid "I grieve that I have failed you, my lord Kalenz..."
-msgstr "Lamento fallarvos, señor Cälén…"
+msgstr "Lamento fallarvos, cabaleiro Cälén…"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:124
