--- a/po/wesnoth-multiplayer/gl.po
+++ b/po/wesnoth-multiplayer/gl.po
@@ -15,8 +15,9 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-29 19:41+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 07:15+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -647,7 +648,7 @@ msgid ""
 "of his once great bearing and strength.\n"
 "(inscribed by Fynmiir)"
 msgstr ""
-"Bravo heroe da idade dourada de Wesnoth, este gran xinete e comandante dos "
+"Bravo heroe da idade dourada do Noroeste, este gran xinete e comandante dos "
 "homes chegou a este lugar maldito durante unha incursión contra os orcos. "
 "Collidos de imprevisto polas noxentas criaturas, moitos dos seus compañeiros "
 "morreron, pero el loitou con valentía, acabando coa vida de moitos inimigos. "
@@ -812,7 +813,7 @@ msgid ""
 "the necromancers from these lands in 961 YW."
 msgstr ""
 "A provincia de Cinsaun chámase así en honor á raíña guerreira Cinsaun I, que "
-"expulsou aos nigromantes destas terras no ano 961 d.W."
+"expulsou aos nigromantes destas terras no ano 961 d.N."
 
 #. [multiplayer]: id=multiplayer_2p_Dark_Forecast
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:5
@@ -1461,7 +1462,7 @@ msgid ""
 "battles."
 msgstr ""
 "Esta ruta de subministración tivo un papel importante en moitas das "
-"meirandes batallas de Wesnoth."
+"meirandes batallas do Noroeste."
 
 #. [multiplayer]: id=multiplayer_Alirok_Marsh
 #: data/multiplayer/scenarios/3p_Alirok_Marsh.cfg:5
@@ -2191,7 +2192,7 @@ msgstr ""
 #. [multiplayer]: id=wesbench_ai
 #: data/multiplayer/scenarios/Wesbench_AI.cfg:9
 msgid "Wesnoth Benchmark: AI"
-msgstr "Proba de rendemento do Wesnoth: intelixencia artificial"
+msgstr "Proba de rendemento do xogo: intelixencia artificial"
 
 #. [multiplayer]: id=wesbench_ai
 #: data/multiplayer/scenarios/Wesbench_AI.cfg:10
@@ -2199,13 +2200,13 @@ msgid ""
 "A wesnoth benchmark, use --nogui --no-delay --multiplayer --"
 "scenario=wesbench_ai --exit-at-end."
 msgstr ""
-"Unha proba de rendemento do Wesnoth, emprega --nogui --no-delay --"
-"multiplayer --scenario=wesbench_ai --exit-at-end."
+"Unha proba de rendemento do xogo, emprega --nogui --no-delay --multiplayer --"
+"scenario=wesbench_ai --exit-at-end."
 
 #. [multiplayer]: id=wesbench_scroll
 #: data/multiplayer/scenarios/Wesbench_Scroll.cfg:9
 msgid "Wesnoth Benchmark: Scrolling"
-msgstr "Proba de rendemento do Wesnoth: desprazamento"
+msgstr "Proba de rendemento do xogo: desprazamento"
 
 #. [multiplayer]: id=wesbench_scroll
 #: data/multiplayer/scenarios/Wesbench_Scroll.cfg:10
@@ -2213,14 +2214,14 @@ msgid ""
 "A wesnoth benchmark, use --no-delay --multiplayer --scenario=wesbench_scroll "
 "--exit-at-end."
 msgstr ""
-"Unha proba de rendemento do Wesnoth, emprega --no-delay --multiplayer --"
+"Unha proba de rendemento do xogo, emprega --no-delay --multiplayer --"
 "scenario=wesbench_scroll --exit-at-end."
 
 #. [multiplayer]: id=wesbench_shroud_walk
 #: data/multiplayer/scenarios/Wesbench_Shroud_Walk.cfg:9
 msgid "Wesnoth Benchmark: Walking through Shroud"
 msgstr ""
-"Proba de rendemento do Wesnoth: camiñando a través do manto do descoñecido"
+"Proba de rendemento do xogo: camiñando a través do manto do descoñecido"
 
 #. [multiplayer]: id=wesbench_shroud_walk
 #: data/multiplayer/scenarios/Wesbench_Shroud_Walk.cfg:10
@@ -2228,7 +2229,7 @@ msgid ""
 "A wesnoth benchmark, use --no-delay --multiplayer --"
 "scenario=wesbench_shroud_walk --exit-at-end."
 msgstr ""
-"Unha proba de rendemento do Wesnoth, emprega --no-delay --multiplayer --"
+"Unha proba de rendemento do xogo, emprega --no-delay --multiplayer --"
 "scenario=wesbench_shroud_walk --exit-at-end."
 
 #~ msgid "Default + Khalifate"
