--- a/po/wesnoth-sotbe/gl.po
+++ b/po/wesnoth-sotbe/gl.po
@@ -10,13 +10,15 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-03 20:48+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 09:18+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
 
@@ -223,10 +225,10 @@ msgid ""
 "Black-Eye Karun, ruler of the enemy orcs. A peace treaty between the "
 "Alliance and the orcs settled their territorial disputes."
 msgstr ""
-"Raúl I, señor protector da Alianza do Norte, asinou a paz cos seus inimigos "
-"os orcos no cuarto ano do seu mandato. Acabou con quince anos de guerra con "
-"Carun “Ollo negro”, o líder dos orcos. Un tratado de paz entre os orcos e a "
-"alianza puxo fin ás súas disputas territoriais."
+"Raúl I, cabaleiro protector da Alianza do Norte, asinou a paz cos seus "
+"inimigos os orcos no cuarto ano do seu mandato. Acabou con quince anos de "
+"guerra con Carun “Ollo negro”, o líder dos orcos. Un tratado de paz entre os "
+"orcos e a alianza puxo fin ás súas disputas territoriais."
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/01_End_of_Peace.cfg:107
@@ -4646,7 +4648,7 @@ msgid ""
 msgstr ""
 "Gru concretamente pasouno de vicio nestas excursións. O grande, veloz e "
 "enxeñoso troll volveuse aínda máis famoso que Quipui. As historias sobre o "
-"seu valor e astucia chegaron ata o mesmísimo Wesnoth."
+"seu valor e astucia chegaron ata o mesmísimo Reino do Noroeste."
 
 # orco xamán aprendiz FIXADO
 #. [unit_type]: id=Novice Orcish Shaman, race=orc
