--- a/po/wesnoth-thot/gl.po
+++ b/po/wesnoth-thot/gl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-19 20:19+0200\n"
+"PO-Revision-Date: 2012-05-22 09:25+0200\n"
 "Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -19,6 +19,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
@@ -66,7 +67,7 @@ msgstr "(esixente)"
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:19
 msgid "Lord"
-msgstr "Señor"
+msgstr "Cabaleiro"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
@@ -239,7 +240,7 @@ msgid ""
 msgstr ""
 "Así e todo, a ameaza dos orcos, os humanos salvaxes e os non mortos non "
 "desaparecera, polo que os ananos tiveron que situar gardas en varios puntos "
-"das proximidades de Neilga. No ano 550 d.W., o capitán da porta oriental foi "
+"das proximidades de Neilga. No ano 550 d.N., o capitán da porta oriental foi "
 "informado do avistamento dun pequeno grupo de orcos pola zona."
 
 #. [message]: speaker=Aiglondur
@@ -271,7 +272,7 @@ msgstr ""
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:157
 msgid "The maker’s mark is strange to me. We had best consult the lord Hamel."
 msgstr ""
-"Non me soa a sinatura. Será mellor que lle preghuntemos ao señor Hamel."
+"Non me soa a sinatura. Será mellor que lle preghuntemos ao cabaleiro Hamel."
 
 #. [scenario]: id=02_Reclaiming_the_Past
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:3
@@ -295,8 +296,8 @@ msgid ""
 "Loremasters..."
 msgstr ""
 "Despois da victoria contra os orcos, Aiglondur foi convocado á sala de "
-"audiencias de Hamel, señor de Neilga e Señor Adxunto da Alianza do Norte. "
-"Xunta o estrado había un estraño, vestido coas roupas da Orde dos "
+"audiencias de Hamel, señor de Neilga e Cabaleiro Adxunto da Alianza do "
+"Norte. Xunta o estrado había un estraño, vestido coas roupas da Orde dos "
 "Historiadores…"
 
 #. [unit]: type=Dwarvish Witness, id=Angarthing_dummy
@@ -400,7 +401,7 @@ msgid ""
 "of Loremasters has given me leave to reveal that the craft secrets were not, "
 "actually, quite as lost as we believed."
 msgstr ""
-"Iso é serto só en parte, señor Hamel. A orde consedeume permiso para "
+"Iso é serto só en parte, cabaleiro Hamel. A orde consedeume permiso para "
 "revelarvos que os seghredos do ghravado de runas e a maxia arcana non están "
 "completamente perdidos, como outrora pensabamos."
 
@@ -518,12 +519,12 @@ msgstr ""
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:196
 msgid "Aye, my Lord Hamel."
-msgstr "Moi ben, señor Hamel."
+msgstr "Moi ben, cabaleiro Hamel."
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:200
 msgid "The Order thanks you, Lord Hamel"
-msgstr "A orde aghradese a vosa axuda, señor Hamel."
+msgstr "A orde aghradese a vosa axuda, cabaleiro Hamel."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:204
@@ -1689,7 +1690,7 @@ msgid ""
 "see to my troop’s care. Food will be brought to you; rest well, we will "
 "speak again."
 msgstr ""
-"Iso son asuntos de historiadores e señores, á xente coma min non nos "
+"Iso son asuntos de historiadores e cabaleiros, á xente coma min non nos "
 "preocupa. Aghora debo aseghurarme de que os feridos estan en boas mans. "
 "Descansade, xa falaremos."
 
@@ -1824,7 +1825,7 @@ msgid ""
 "Impertinent fool! It is not for you to dictate to a lord in his own holding, "
 "much less one who holds the very soul of the dwarves in his hand."
 msgstr ""
-"Parvo impertinente! Non che corresponde a ti darlle ordes a un señor nas "
+"Parvo impertinente! Non che corresponde a ti darlle ordes a un cabaleiro nas "
 "súas terras, e moito menos a un que ten nas súas mans a alma dos ananos."
 
 #. [message]: speaker=Angarthing
@@ -2369,7 +2370,7 @@ msgid ""
 "the Lord Protector of the Alliance."
 msgstr ""
 "Dixéronme que aquí atoparía a Aiglondur de Neilga. Traio unha mensaxe de "
-"Talin, o Señor Protector da Alianza."
+"Talin, o Cabaleiro Protector da Alianza."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:142
@@ -2398,7 +2399,7 @@ msgid ""
 "Aiglondur, the Protector dubs you a Lord Companion of the Alliance. He bids "
 "you return to Knalga as soon as convenient, for your investiture."
 msgstr ""
-"Aiglondur, o Protector nomeoute Señor Adxunto da Alianza. Ordénache que "
+"Aiglondur, o Protector nomeoute Cabaleiro Adxunto da Alianza. Ordénache que "
 "volvas a Neilga tan pronto como poidas, para a túa investidura."
 
 # Lord Companion=señor adxunto FIXADO
@@ -2436,7 +2437,7 @@ msgid ""
 "Pelias, my thanks to the Lord Protector; I will attend him in the spring. "
 "But it seems that I have some work to do here first."
 msgstr ""
-"Pelias, dálle as ghrasas ao Señor Protector da miña parte. Irei onda el "
+"Pelias, dálle as ghrasas ao Cabaleiro Protector da miña parte. Irei onda el "
 "naprimavera. Pero parese que vou ter alghunhas cousas que faser aquí con "
 "maior prioridade."
 
@@ -2522,7 +2523,7 @@ msgstr "Anano gardián enmascarado"
 #. [unit_type]: id=Dwarvish Masked Lord, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Lord.cfg:4
 msgid "Dwarvish Masked Lord"
-msgstr "Señor anano enmascarado"
+msgstr "Cabaleiro anano enmascarado"
 
 #. [unit_type]: id=Dwarvish Masked Lord, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Lord.cfg:18
@@ -2535,7 +2536,7 @@ msgid ""
 "several paces. Though slow on their feet, these dwarves are a testament to "
 "the prowess of their kind."
 msgstr ""
-"Temidos nas lendas dos ananos, os señores ananos enmascarados usan os "
+"Temidos nas lendas dos ananos, os cabaleiros ananos enmascarados usan os "
 "formidables poderes de loita da súa especie sen darlle conta aos seus iguais "
 "e aos historiadores dos ananos debido aos escuros e sanguentos usos que fan "
 "das súas armas. Coma aqueles que van coa cara descuberta, os señores ananos "
