--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -16,13 +16,17 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-01 19:25+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 08:49+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
+"adriyetichaves@gmail.com>\n"
+"adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -872,7 +876,7 @@ msgstr "Quero que esta moeda de ouro se transforme noutras dez."
 #. [option]: speaker=narrator
 #: data/core/macros/items.cfg:54
 msgid "Peace throughout Wesnoth."
-msgstr "A paz en Wesnoth"
+msgstr "A paz no Noroeste"
 
 #. [message]: speaker=unit
 #: data/core/macros/items.cfg:62
@@ -2440,7 +2444,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:5 data/hardwired/tips.cfg:137
 msgid "<i>― Great Mage Delfador, 516YW</i>"
-msgstr "<i>— Gran mago Delfador, 516 d.W.</i>"
+msgstr "<i>— Gran mago Delfador, 516 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:8
@@ -2474,7 +2478,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:209 data/hardwired/tips.cfg:229
 #: data/hardwired/tips.cfg:238
 msgid "<i>― The Wesnoth Tactical Guide</i>"
-msgstr "<i>— A guía táctica de Wesnoth</i>"
+msgstr "<i>— A guía táctica do Noroeste</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:12
@@ -2490,7 +2494,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:13
 msgid "<i>― King Konrad, 536YW</i>"
-msgstr "<i>— Rei Conrad, 536 d.W.</i>"
+msgstr "<i>— Rei Conrad, 536 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:16
@@ -2509,7 +2513,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:17 data/hardwired/tips.cfg:129
 msgid "<i>― Memoirs of Gweddry, 627YW</i>"
-msgstr "<i>— Memorias de Uedri, 627 d.W.</i>"
+msgstr "<i>— Memorias de Uedri, 627 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:20
@@ -2532,8 +2536,8 @@ msgid ""
 "you are doing in comparison."
 msgstr ""
 "Hai algunhas xanelas de resumo útiles no menú principal. Por exemplo, o "
-"<b>Cadro da situación</b> permitirache saber como lles vai aos teus "
-"inimigos, e como che vai a ti en comparación."
+"<b>Cadro da situación</b> permitirache saber como lles vai aos  inimigos, e "
+"como che vai a ti en comparación."
 
 #. [tip]
 #: data/hardwired/tips.cfg:28
@@ -2551,7 +2555,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:29 data/hardwired/tips.cfg:105
 #: data/hardwired/tips.cfg:213 data/hardwired/tips.cfg:225
 msgid "<i>― High Lord Kalenz, 470YW</i>"
-msgstr "<i>— Gran señor Cälén, 470 d.W.</i>"
+msgstr "<i>— Gran cabaleiro Cälén, 470 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:32
@@ -2582,12 +2586,12 @@ msgid ""
 "history of Wesnoth, and much more."
 msgstr ""
 "En www.wesnoth.org podes atopar guías de estratexia, soporte técnico, a "
-"historia de Wesnoth, e moito máis (en inglés)."
+"historia do Noroeste, e moito máis (en inglés)."
 
 #. [tip]
 #: data/hardwired/tips.cfg:41
 msgid "<i>― The Wesnoth Community</i>"
-msgstr "<i>— A comunidade de Wesnoth</i>"
+msgstr "<i>— A comunidade do Noroeste</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:44
@@ -2606,7 +2610,7 @@ msgstr ""
 msgid ""
 "<i>― Royal Compendium of Battle Terminology: Volume II (reprinted 221YW)</i>"
 msgstr ""
-"<i>— Compendio real de terminoloxía bélica - Volume II (edición do 212 d.W.)"
+"<i>— Compendio real de terminoloxía bélica - Volume II (edición do 212 d.N.)"
 "</i>"
 
 #. [tip]
@@ -2622,7 +2626,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:125 data/hardwired/tips.cfg:133
 #: data/hardwired/tips.cfg:217
 msgid "<i>― Haldric II, 42YW, Handbook of Tactical Analysis: Volume I</i>"
-msgstr "<i>— Haldric II, 42 d.W., Manual de análise táctica - Volume I</i>"
+msgstr "<i>— Haldric II, 42 d.N., Manual de análise táctica - Volume I</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:52
@@ -2727,7 +2731,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:77
 msgid "<i>― Haldric II, 43YW, Handbook of Tactical Analysis: Volume II</i>"
-msgstr "<i>— Haldric II, 43 d.W., Manual de análise táctica - Volume II</i>"
+msgstr "<i>— Haldric II, 43 d.N., Manual de análise táctica - Volume II</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:80
@@ -2776,7 +2780,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:93 data/hardwired/tips.cfg:173
 msgid "<i>― Sir Kaylan, 498YW</i>"
-msgstr "<i>— Señor Cailan, 498 d.W.</i>"
+msgstr "<i>— Señor Cailan, 498 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:96
@@ -2792,7 +2796,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:97
 msgid "<i>― Sir Kaylan, 502YW</i>"
-msgstr "<i>— Señor Cailan, 502 d.W.</i>"
+msgstr "<i>— Señor Cailan, 502 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:100
@@ -2846,7 +2850,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:117
 msgid "<i>― Meneldur, 123YW</i>"
-msgstr "<i>— Meneldur, 123 d.W.</i>"
+msgstr "<i>— Meneldur, 123 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:120
@@ -2910,12 +2914,12 @@ msgstr ""
 #: data/hardwired/tips.cfg:140
 msgid "Use lines of troops to screen your injured units while they recover."
 msgstr ""
-"Usa liñas de unidades para protexer ás unidades feridas mentres serecuperan."
+"Usa liñas de unidades para protexer ás unidades feridas mentres se recuperan."
 
 #. [tip]
 #: data/hardwired/tips.cfg:141
 msgid "<i>― Princess Li’sar, 515YW</i>"
-msgstr "<i>— Princesa Li’sar, 515 d.W.</i>"
+msgstr "<i>— Princesa Li’sar, 515 d.N.</i>"
 
 # «Read» → «Podes ler» por tratarse dun consello (é información, non unha instrucción).
 #. [tip]
@@ -2955,7 +2959,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:157 data/hardwired/tips.cfg:205
 msgid "<i>― The Scroll of Chantal, 516YW</i>"
-msgstr "<i>— O manuscrito de Chantal, 516 d.W.</i>"
+msgstr "<i>— O manuscrito de Chantal, 516 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:160
@@ -2975,7 +2979,7 @@ msgstr "Os ataques <i>arcanos</i> son moi efectivos contra os non mortos."
 #. [tip]
 #: data/hardwired/tips.cfg:165
 msgid "<i>― Great Sage Dacyn, 626YW</i>"
-msgstr "<i>— Gran sabio Dasin, 626 d.W.</i>"
+msgstr "<i>— Gran sabio Dasin, 626 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:168
@@ -3033,7 +3037,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:185
 msgid "<i>― Queen Li’sar, 528YW</i>"
-msgstr "<i>— Raíña Li’sar, 528 d.W.</i>"
+msgstr "<i>— Raíña Li’sar, 528 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:188
@@ -4173,7 +4177,7 @@ msgstr "Non se puido cargar o mapa da partida: "
 
 #: src/game_controller.cpp:1077 src/game_controller_abstract.cpp:99
 msgid "The Battle for Wesnoth"
-msgstr "A batalla por Wesnoth"
+msgstr "A batalla polo Noroeste"
 
 #: src/game_controller.cpp:1196
 msgid "The following add-on had errors and could not be loaded:"
@@ -5288,10 +5292,9 @@ msgid ""
 "continue? If you have downloaded add-ons, do not click 'ok'! They would "
 "instantly take over your computer. You have been warned."
 msgstr ""
-"Estás a piques de abrir unha brecha na seguridade do Wesnoth. Seguro que "
-"queres continuar? Se descargaches complementos, non premas en «Aceptar»! "
-"Calquera podería tomar o control completo sobre o teu computador. Quedas "
-"avisado."
+"Estás a piques de abrir unha brecha na seguridade do xogo. Seguro que queres "
+"continuar? Se descargaches complementos, non premas «Aceptar»! Calquera "
+"podería tomar o control completo do teu computador. Quedas advertido."
 
 #: src/menu_events.cpp:3453
 msgid "Unsafe mode enabled!"
@@ -11230,7 +11233,7 @@ msgstr "Opcións de planificación"
 #, fuzzy
 #~ msgid ""
 #~ "<i>― Haldric II, 42 YW, from Handbook of Tactical Analysis: Volume I</i>"
-#~ msgstr "— Manual de análise táctica - Volume I, Haldric II, 42 d.W."
+#~ msgstr "— Manual de análise táctica - Volume I, Haldric II, 42 d.N."
 
 #~ msgid "About to upload statistics — Help us make Wesnoth better for you!"
 #~ msgstr ""
