--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -15,8 +15,9 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-29 19:32+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 07:00+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -2263,7 +2264,7 @@ msgstr ""
 "necesita fornecer un contrasinal en caso de que queira utilizar un nome de "
 "usuario rexistrado.\n"
 "\n"
-"Pode acceder aos foros de A batalla por Wesnoth en http://forums.wesnoth.org/"
+"Pode acceder aos foros oficiais en http://forums.wesnoth.org/"
 
 #. [column]
 #: data/gui/default/window/mp_method_selection.cfg:146
@@ -2323,7 +2324,7 @@ msgstr "Axuda"
 #. [button]: id=help
 #: data/gui/default/window/title_screen.cfg:147
 msgid "Show Battle for Wesnoth help"
-msgstr "Amosar a axuda de A batalla por Wesnoth"
+msgstr "Amosar a axuda do xogo"
 
 #. [button]: id=previous_tip
 #: data/gui/default/window/title_screen.cfg:163
@@ -2338,7 +2339,7 @@ msgstr "Amosar o seguinte consello."
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:223
 msgid "Start a tutorial to familiarize yourself with the game"
-msgstr "Aprender o xogar e familiarizarse con A batalla por Wesnoth."
+msgstr "Aprender o xogar e familiarizarse co xogo."
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [grid]
