--- a/po/wesnoth-utbs/es.po
+++ b/po/wesnoth-utbs/es.po
@@ -3009,7 +3009,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2608
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2872
 msgid ""
-"We have suffered losses, but we we are not broken yet. We have saved most of "
+"We have suffered losses, but we are not broken yet. We have saved most of "
 "our people tonight. But while elves who have fought with you in the past "
 "will gladly return, as the numbers of our people dwindle, it’s going to "
 "become more and more costly to recruit new warriors. It would be wise to "
@@ -3025,7 +3025,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2617
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2881
 msgid ""
-"We have suffered grievous losses, but we we are not broken yet. Long will "
+"We have suffered grievous losses, but we are not broken yet. Long will "
 "this slaughter be remembered by our people. Where was Eloh during the "
 "darkness? And I’m afraid that while elves who have fought with you in the "
 "past will gladly return, as the numbers of our people dwindle, it’s going to "
