Updated the Japanese translation.

--- a/po/wesnoth-tutorial/ja.po
+++ b/po/wesnoth-tutorial/ja.po
@@ -1592,12 +1592,13 @@ msgstr ""
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"ほかにあのオークのところまで移動できるユニットはありません。私の $unit.language_name "
-"がオークの反撃を切り抜けられるとよいのですが！もっと多くの村を手に入れたいと"
-"思います。そして次のターンに備えてみんなを近くに移動させます。"
+"ほかにあのオークのところまで移動できるユニットはありません。私の $unit."
+"language_name がオークの反撃を切り抜けられるとよいのですが！もっと多くの村を"
+"手に入れたいと思います。そして次のターンに備えてみんなを近くに移動させます。"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
