--- a/po/wesnoth-manual/ja.po
+++ b/po/wesnoth-manual/ja.po
@@ -1,23 +1,27 @@
 # Japanese translations for Battle for Wesnoth package
-# Copyright (C) 2007-2010 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # Automatically generated, 2007.
 # IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
 # yma <yma9yma@gmail.com>, 2011.
 #
+#   確認用SJIS範囲外UNICODE文字「 • 」 かぎかっこの中身が中点的なものとして表示されていれば、
+#   あなたの編集環境はSJIS範囲外UNICODEを正常に扱えています。
+#   そうでない場合はwesnoth日本語wiki(http://wikiwiki.jp/wesnoth/)にリンクがある2ch本スレなどでご質問ください。
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth svn-trunk\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:55+0100\n"
-"PO-Revision-Date: 2011-03-18 23:17+0900\n"
-"Last-Translator:  yma <yma9yma@gmail.com>\n"
+"POT-Creation-Date: 2012-01-22 14:59+0100\n"
+"PO-Revision-Date: 2011-11-11 03:32+0900\n"
+"Last-Translator: yma <yma9yma@gmail.com>\n"
 "Language-Team: Japanese Translation Team\n"
 "Language: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Poedit-Language: Japanese\n"
 
 #. type: Attribute 'lang' of: <book>
 #: /src/wesnoth/doc/manual/manual.en.xml:6
@@ -79,7 +83,6 @@ msgstr ""
 
 #. type: Content of: <book><preface><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:26
-#, fuzzy
 msgid ""
 "You will be able to select from among over two hundred unit types (infantry, "
 "cavalry, archers, and mages are just the beginning) and fight actions "
@@ -88,9 +91,9 @@ msgid ""
 "fantasy battles."
 msgstr ""
 "あなたは歩兵・騎兵・弓兵・魔術師やもっと多くの 200 種類以上のユニットからのい"
-"くつかを選択して作った小部隊の伏兵で敵の大軍を撃破することもできるでしょう。"
-"あなたは友達か見知らぬ人に挑戦することもできますし、多くの登場人物がいるファ"
-"ンタジー世界で戦うこともできます。"
+"くつかを選択して作り上げた小部隊の伏兵で敵の大軍を撃破することもできるでしょ"
+"う。あなたは友達か見知らぬ人に挑戦することもできますし、多くの登場人物がいる"
+"ファンタジー世界で戦うこともできます。"
 
 #. type: Content of: <book><preface><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:31
@@ -277,7 +280,6 @@ msgstr "チュートリアル"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:102
-#, fuzzy
 msgid ""
 "The tutorial is a real, but basic, game which teaches you some of the basic "
 "controls needed to play the game. Winning or losing is not important here, "
@@ -516,7 +518,6 @@ msgstr "キャンペーン"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:283
-#, fuzzy
 msgid ""
 "Campaigns are sequences of battles with a connecting storyline. Typical "
 "campaigns have about 10–20 scenarios. The main advantage with campaigns is "
@@ -526,7 +527,7 @@ msgid ""
 "the next, so you don&#8217;t lose units you don&#8217;t use."
 msgstr ""
 "キャンペーンはあるストーリーを基本とした一連の戦いです。典型的なキャンペーン"
-"は 10?20 本程度のシナリオを含みます。キャンペーンの主な利点はあなたの軍隊を育"
+"は 10–20 本程度のシナリオを含みます。キャンペーンの主な利点はあなたの軍隊を育"
 "てることができることです。シナリオを完了した時、あなたの生き残りユニットは自"
 "動的に保存され、次シナリオで使用することができます。もし、次シナリオでは使用"
 "しなかったとしても、次々シナリオ以降で使用することもできます。"
@@ -982,7 +983,6 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:519
-#, fuzzy
 msgid "Life and Death — Experience"
 msgstr "生と死 - 経験値"
 
@@ -1006,7 +1006,6 @@ msgstr "勝利と敗北"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:527
-#, fuzzy
 msgid ""
 "Pay careful attention to the Objectives pop-up box at the beginning of each "
 "scenario. Usually you will achieve victory by killing all enemy leaders, and "
@@ -1860,6 +1859,7 @@ msgstr "待ち行列を上がる"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
+#, fuzzy
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -1933,7 +1933,6 @@ msgstr "維持費"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1343
-#, fuzzy
 msgid ""
 "Each unit also has an upkeep cost. The upkeep cost is generally equal to the "
 "level of the unit, unless the unit has the \"Loyal\" trait (<link linkend="
@@ -1945,10 +1944,10 @@ msgid ""
 msgstr ""
 "それぞれのユニットには維持費が発生します。一般的に、そのユニットに<link "
 "linkend=\"traits\">忠義</link>)特性がない限り、レベルと同じ維持費がかかりま"
-"す。ユニットが雇用されずに加わるとはどういうことでしょうか？つまり、リーダー"
-"と自主的に参加したユニットのことで、大抵は忠義特性を持ちます。維持費合計がそ"
-"の陣営の占領している村の数を上回る場合に限り維持費が徴収されます。よって、維"
-"持費合計と村の数と支払われた維持費の金額は一致しません。"
+"す。ユニットが雇用されずに加わるとはどういうことでしょうか？　つまり、リー"
+"ダーと自主的に参加したユニットのことで、大抵は忠義特性を持ちます。維持費合計"
+"がその陣営の占領している村の数を上回る場合に限り維持費が徴収されます。よっ"
+"て、維持費合計と村の数と支払われた維持費の金額は一致しません。"
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1351
@@ -1962,9 +1961,9 @@ msgstr "というわけで、最終的な収入を決定する式はこのよう
 
 #. type: Content of: <book><chapter><section><section><literallayout>
 #: /src/wesnoth/doc/manual/manual.en.xml:1353
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2 + villages − maximum(0, upkeep − villages)"
-msgstr " 2 + 村の数 ? ( 0 または 維持費合計 ? 村の数 )の大きい方"
+msgstr " 2 + 村の数 − ( 0 または 維持費合計 − 村の数 )の大きい方"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1354
@@ -2026,12 +2025,12 @@ msgid ""
 "and less at night. Chaotic units do more damage at night and less during the "
 "day. Liminal units do less damage during both night and daytime."
 msgstr ""
-"全てのユニットは秩序・中立・混沌・黄昏（たそがれ）の中からどれか一つ時刻属性"
-"を持ちます。時刻属性はそのユニットがゲーム内の時刻によって受ける影響のことで"
-"す。中立ユニットは時刻によって影響されません。秩序ユニットは敵に与えるダメー"
-"ジが昼間は大きく夜間は小さくなります。逆に混沌ユニットは敵に与えるダメージが"
-"昼間は小さく夜間は大きくなります。黄昏ユニットは敵に与えるダメージが昼夜とも"
-"に小さく本来の力を発揮できるのは夜明けと夕方だけです。"
+"全てのユニットは秩序・中立・混沌・薄明の中からどれか一つ時刻属性を持ちます。"
+"時刻属性はそのユニットがゲーム内の時刻によって受ける影響のことです。中立ユ"
+"ニットは時刻によって影響されません。秩序ユニットは敵に与えるダメージが昼間は"
+"大きく夜間は小さくなります。逆に混沌ユニットは敵に与えるダメージが昼間は小さ"
+"く夜間は大きくなります。黄昏ユニットは敵に与えるダメージが昼夜ともに小さく本"
+"来の力を発揮できるのは夜明けと夕方だけです。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1378
@@ -2049,8 +2048,8 @@ msgid ""
 "The following table shows the effects of different times of the day on the "
 "damage dealt by lawful, chaotic, and liminal units:"
 msgstr ""
-"次の表で秩序・混沌・黄昏（たそがれ）ユニットの時刻による影響を示します。（中"
-"立ユニットは時刻に全く影響されません）"
+"次の表で秩序・混沌・薄明ユニットの時刻による影響を示します。（中立ユニットは"
+"時刻に全く影響されません）"
 
 #. type: Content of: <book><chapter><section><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1387
@@ -2086,7 +2085,7 @@ msgstr "混沌"
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1413
 msgid "Liminal"
-msgstr "黄昏（たそがれ）"
+msgstr "薄明"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1420
@@ -2147,9 +2146,8 @@ msgstr "images/schedule-morning.png"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1456
-#, fuzzy
 msgid "Day (morning)"
-msgstr "朝"
+msgstr "日中（朝）"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1459
@@ -2172,7 +2170,7 @@ msgstr "+25%"
 #: /src/wesnoth/doc/manual/manual.en.xml:1584
 #: /src/wesnoth/doc/manual/manual.en.xml:1590
 msgid "−25%"
-msgstr ""
+msgstr "−25%"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1470
@@ -2198,7 +2196,7 @@ msgstr "images/schedule-afternoon.png"
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1481
 msgid "Day (afternoon)"
-msgstr "午後"
+msgstr "日中（午後）"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1495
@@ -3135,7 +3133,6 @@ msgstr "移動"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2211
-#, fuzzy
 msgid ""
 "Clicking on a unit identifies all the places it can move on its current turn "
 "by dimming unreachable hexes (pressing the number keys 2–7 will identify the "
@@ -3410,7 +3407,6 @@ msgstr "戦闘"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2379
-#, fuzzy
 msgid ""
 "If you move next to an enemy unit, you may attack it. Click on your unit "
 "that is next to an enemy unit, and click on the enemy you want to attack – "
@@ -3441,7 +3437,6 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2391
-#, fuzzy
 msgid ""
 "Different types of attacks do different amounts of damage, and a certain "
 "number of strikes may be made with each weapon. For instance, an Elvish "
@@ -3451,9 +3446,9 @@ msgid ""
 msgstr ""
 "異なる種類の攻撃はそれぞれ異なるダメージを与えるので、それぞれの武器は敵に与"
 "えられるダメージが異なります。簡単に言うと、エルフの戦士は剣が命中すると 5 ダ"
-"メージを与え、一連の戦闘で剣を振り下ろすのは4回ということです。これは５－４と"
-"表記されます。この意味は命中すると 5 ダメージ、攻撃可能回数は 4 回ということ"
-"です。"
+"メージを与え、一連の戦闘で剣を振り下ろすのは 4 回ということです。これは 5-4 "
+"と表記されます。この意味は命中すると 5 ダメージ、攻撃可能回数は 4 回というこ"
+"とです。"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2396
@@ -4095,12 +4090,11 @@ msgid ""
 "When its weak time is about to arise, your advance will push forth."
 msgstr ""
 "人間族のような秩序ユニットは昼間によりよく戦えます。オーク族やアンデッドのよ"
-"うな混沌ユニットは夜間によりよく戦えます。そして黄昏（たそがれ）ユニットは薄"
-"明かりの下で最大の戦闘力を発揮します。理想的には、まずあなたが強く敵が弱い時"
-"間帯に出会うことを求めるでしょう。敵が強力な時間帯には、あなたの防衛線を強固"
-"にして防御に好都合な地点を確保し続けるために多少の犠牲が払われるのはよくある"
-"ことです。敵が弱体化する時間帯には、あなたは前進して敵を押しまくれるでしょ"
-"う。"
+"うな混沌ユニットは夜間によりよく戦えます。そして薄明ユニットは薄明かりの下で"
+"最大の戦闘力を発揮します。理想的には、まずあなたが強く敵が弱い時間帯に出会う"
+"ことを求めるでしょう。敵が強力な時間帯には、あなたの防衛線を強固にして防御に"
+"好都合な地点を確保し続けるために多少の犠牲が払われるのはよくあることです。敵"
+"が弱体化する時間帯には、あなたは前進して敵を押しまくれるでしょう。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2689
@@ -4281,7 +4275,6 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:2783
-#, fuzzy
 msgid "During the scenario"
 msgstr "シナリオの途中では"
 
@@ -4327,7 +4320,6 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2813
-#, fuzzy
 msgid ""
 "You can cause damage to enemies with advanced units and then finish them "
 "with lower level units — to give them more experience (and finally make them "
@@ -4371,7 +4363,6 @@ msgstr "混沌ユニットは夜にはより大きく昼にはより小さなダ
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2847
-#, fuzzy
 msgid ""
 "remember to always check the time of day on the right side of the screen. "
 "Plan ahead — think about what it&#8217;s going to be next turn as well as "
