eclipse plugin: small tweaks to the documentation

--- a/utils/umc_dev/manual/user_manual.tex
+++ b/utils/umc_dev/manual/user_manual.tex
@@ -26,7 +26,7 @@
   \begin{center}
     \includegraphics[scale=0.6]{definitions.png}
   \end{center}
-The plugin has its homepage at: \href{http://eclipse.wesnoth.org/}{http://eclipse.wesnoth.org/} \\
+The plugin has its homepage at: \url{http://eclipse.wesnoth.org/} \\
 
 Through this readme the following terms with the specified meaning will be used:
 \begin{enumerate}
@@ -49,7 +49,7 @@ A quick list before getting into details:
 
 Now for getting all those items:
 \begin{enumerate}
-\item The plugin runs on the following platforms: Windows 32/64 bit, Linux 32/64 bit and Mac OSX 64bit. Note that \textbf{Mac OSX 32 bit} is \textbf{not supported}. If you want to know why, please consult the Frequently Asked Questions section.
+\item The plugin runs on the following platforms: Windows 32/64 bit, Linux 32/64 bit and Mac OS X 64bit. Note that \textbf{Mac OS X 32 bit} is \textbf{not supported}. If you want to know why, please consult the Frequently Asked Questions section.
 \item Download and install Oracle/Sun's Java Version 6 (Java SE6): \href{http://java.sun.com/javase/downloads/widget/jdk6.jsp}{Download JDK}
 
 \textit{Note:} The plugin uses Java SE6, thus older versions (like 1.4 or 1.5) don't work with it.\\
@@ -57,12 +57,12 @@ Now for getting all those items:
 
 \item Download and install Python 2.x:
  \begin{enumerate}
-   \item \textbf{Windows:} Download and install from here: \href{http://python.org/download/}{Download Python} , selecting a 2.x version
-   \item \textbf{Linux:} Use the regular package manager for installing it from the repositories.
-   \item \textbf{Mac:} Download and install from here: \href{http://python.org/download/}{Download Python} , selecting a 2.x version
-   \item Check the guide over here: \href{http://wiki.python.org/moin/BeginnersGuide/Download}{Python Download and install}
+   \item \textbf{Windows:} Download and install it from here: \href{http://python.org/download/}{Download Python} , selecting a 2.x version
+   \item \textbf{Linux:} Use the distribution's package manager for installing it.
+   \item \textbf{Mac:} Download and install it from here: \href{http://python.org/download/}{Download Python} , selecting a 2.x version
+   \item For other operating systems, check the guide over here: \href{http://wiki.python.org/moin/BeginnersGuide/Download}{Python download and install}
   \end{enumerate}
- \textit{Note:} Please ensure you install the 2.x versions. Versions 3.x are \textbf{not} yet supported by the Wesnoth's WML Tools.
+ \textit{Note:} Please ensure you install the 2.x version. Version 3.x are \textbf{not} yet supported by the Wesnoth's WML Tools.
 
 \item You will need to have a wesnoth version 1.9.x, trunk or newer, in order for the plugin's features to correctly work.
 
@@ -95,7 +95,7 @@ The Eclipse version, like the name says, needs a working Eclipse environment.
 \end{enumerate}
 
 \subsection{Standalone version}
-The standalone version of the plugin, does not need any Eclipse ``thingy". Just fulfil the prerequisites and you're ready to go. The standalone version is currently available as zip archives for major OSes (Windows, Mac OSX and Linux) and Architectures (x86 and x64). To use the standalone version follow the following steps:
+The standalone version of the plugin, does not need any Eclipse ``thingy". Just fulfil the prerequisites and you're ready to go. The standalone version is currently available as zip archives for major OSes (Windows, Mac OS X and Linux) and Architectures (x86 and x64). To use the standalone version follow the following steps:
 
 \begin{enumerate}
   \item Go to \href{http://eclipse.wesnoth.org/doc\_howto.html}{http://eclipse.wesnoth.org/doc\_howto.html}
@@ -247,7 +247,7 @@ or on windows:\\
 or\\
 \indent \textbf{C:/Users/$<$your username$>$/Local Settings/Temp/wesnoth\_plugin/logs}
 
-\subsection{Why Mac OSX 32 bit is not supported?}
-Apple decided to manage itself the versions that can run on each Mac version. Thus the modern Java SE6 version - which is used by the plugin - is not available on 32 bit Macs but on 64bit only. The 32bit Macs have just Java SE5 version available. Trying to port the plugin to the ``outdated'' java version is not likely to be done, so please consider upgrading your OS.
+\subsection{Why Mac OS X 32 bit is not supported?}
+Apple decided to manage itself the versions that can run on each Mac version. Thus the modern Java SE6 version - which is used by the plugin - is not available on 32 bit Macs but on 64 bit only. The 32 bit Macs have just Java SE5 version available. Trying to port the plugin to the ``outdated'' java version is not likely to be done, so please consider upgrading your OS.
 
 \end{document}
