eclipse plugin: Fix some typos in the documentation

--- a/utils/umc_dev/manual/user_manual.tex
+++ b/utils/umc_dev/manual/user_manual.tex
@@ -62,7 +62,7 @@ Now for getting all those items:
    \item \textbf{Mac:} Download and install it from here: \href{http://python.org/download/}{Download Python} , selecting a 2.x version
    \item For other operating systems, check the guide over here: \href{http://wiki.python.org/moin/BeginnersGuide/Download}{Python download and install}
   \end{enumerate}
- \textit{Note:} Please ensure you install the 2.x version. Version 3.x are \textbf{not} yet supported by the Wesnoth's WML Tools.
+ \textit{Note:} Please ensure you install the 2.x version. Version 3.x is \textbf{not} yet supported by the Wesnoth's WML Tools.
 
 \item You will need to have a wesnoth version 1.9.x, trunk or newer, in order for the plugin's features to correctly work.
 
