Updated the Spanish translation.

--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-04-07 12:14+0200\n"
-"PO-Revision-Date: 2012-03-03 00:02+0100\n"
+"PO-Revision-Date: 2012-07-02 19:21+0200\n"
 "Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -43,7 +43,7 @@ msgstr "Bajo tierra"
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:820
 #: data/core/macros/abilities.cfg:582
 msgid "berserk"
-msgstr "berserk"
+msgstr "frenesí"
 
 #. [berserk]: id=berserk
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:823
@@ -53,7 +53,7 @@ msgid ""
 "Whether used offensively or defensively, this attack presses the engagement "
 "until one of the combatants is slain, or 30 rounds of attacks have occurred."
 msgstr ""
-"Berserk:\n"
+"Frenesí:\n"
 "Usado tanto de forma ofensiva como defensiva, este ataque alarga la lucha "
 "hasta la muerte de uno de los combatientes, con un máximo de 30 rondas de "
 "ataques."
@@ -4735,8 +4735,8 @@ msgid ""
 " Whenever its berserk attack is used, this unit continues to push the attack "
 "until either it or its enemy lies dead."
 msgstr ""
-" Cuando usa su ataque berserker, esta unidad continúa atacando hasta que uno "
-"de los dos contendientes haya muerto."
+" Cuando usa su ataque de frenesí, esta unidad continúa atacando hasta que "
+"uno de los dos contendientes haya muerto."
 
 #: data/core/macros/special-notes.cfg:62
 msgid ""
