Removed an extra n that's causing issues...

--- a/po/wesnoth-units/uk.po
+++ b/po/wesnoth-units/uk.po
@@ -4911,7 +4911,7 @@ msgstr ""
 "речі, які воно творить, дають злу новий, небачений арсенал.\n"
 "\n"
 "Це вміння, у всіх відношеннях, є першим кроком на шляху до їх головної мети "
-"- обманути смерть.\n"
+"- обманути смерть."
 
 #. [attack]: type=impact
 #: data/core/units/undead/Necromancer.cfg:39
